<resources>
    <string name="app_name">Soiree</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="review">Review</string>
    <string name="statistics">Statistics</string>
    <string name="rewards">Rewards</string>
    <string name="your_points">Your points %s</string>
    <string name="rate">Rate</string>
    <string name="average_mark">%.2f</string>
    <string name="category_name">%s:</string>
    <string name="poor_text">Poor</string>
    <string name="bad_text">Bad</string>
    <string name="normal_text">Normal</string>
    <string name="good_text">Good</string>
    <string name="excellent_text">Excellent</string>
    <string name="submit_text">Submit</string>
    <string name="not_all_fields_filled">You haven\'t filled all fields!</string>
    <string name="post_failed">Error has happened during sending data to server. Try again</string>
    <string name="post_successful">Your mark has been sent successful</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="button_login_text">Login</string>
    <string name="password_hint_text">Password*</string>
    <string name="login_hint_text">Login*</string>
    <string name="auth_failed">Authorization failed</string>
    <string name="auth_successful">Authorization successful</string>
    <string name="auth_error">Internet connection error</string>
    <string name="refresh_options_menu_text">Refresh</string>
    <string name="exit_options_menu_text">Exit</string>
    <string name="refresh_error">Internet connection error. Swipe down to refresh data.</string>
    <string name="menu_error">Internet connection error. Refresh categories through the menu.</string>
    <string name="staff_done_empty">You have rated all teammates today successfully! Go back tomorrow.</string>
    <string name="statistics_empty">Colleagues have not rated you yet, come back later. </string>
    <string name="rewards_empty">The director hasn\'t given you any awards yet, come back later.</string>
    <string name="obligatory_text">*Required</string>
    <string name="prize_received_text">You prize wait you on the your work place!</string>
</resources>