<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:showDividers="middle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TableRow
            android:gravity="center">
            <com.google.android.material.textview.MaterialTextView
                android:id = "@+id/poor_text"
                android:text="@string/poor_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id = "@+id/bad_text"
                android:text="@string/bad_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id = "@+id/normal_text"
                android:text="@string/normal_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id = "@+id/good_text"
                android:text="@string/good_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id = "@+id/excellent_text"
                android:text="@string/excellent_text"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>